fixing label clicks and dark mode on input-time-picker

--- a/src/components/calcite-input-time-picker/calcite-input-time-picker.scss
+++ b/src/components/calcite-input-time-picker/calcite-input-time-picker.scss
@@ -1,6 +1,3 @@
-:host-context([theme="dark"]) {
-  @include calcite-theme-dark();
-}
 :host {
   display: inline-block;
   user-select: none;
